created route to send email
